--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ body {
 /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
 }
 
+section {
+  padding-top: 60px;
+}
+
 /* The white background content wrapper */
 
 .container > .content {
